--- a/brandosfotos/package.json
+++ b/brandosfotos/package.json
@@ -21,13 +21,13 @@
 		"@nextui-org/snippet": "2.0.43",
 		"@nextui-org/switch": "2.0.34",
 		"@nextui-org/system": "2.2.6",
-		"@nextui-org/theme": "2.2.11",
+		"@nextui-org/theme": "^2.2.11",
 		"@react-aria/ssr": "3.9.4",
 		"@react-aria/visually-hidden": "3.8.12",
 		"clsx": "2.1.1",
 		"framer-motion": "~11.1.1",
 		"intl-messageformat": "^10.5.0",
-		"next": "14.2.4",
+		"next": "^14.2.17",
 		"next-images": "^1.8.5",
 		"next-themes": "^0.2.1",
 		"react": "18.3.1",
